Fix tag link styling, was too dark.

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -3143,7 +3143,8 @@ span + .entry-title {
   padding: 4px 6px;
   margin: 2px;
   text-decoration: none;
-  background-color: #343434;
+  background-color: #e6e6e6;
+  border-bottom: 0 solid transparent;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
